[gd_scene load_steps=7 format=3 uid="uid://6uyp4hbab8gp"]

[ext_resource type="Script" uid="uid://ygjvluupbdtm" path="res://scenes/game_state.gd" id="1_aj67o"]
[ext_resource type="Script" uid="uid://n2spkoxc2iv5" path="res://scripts/pausing.gd" id="2_dq14d"]
[ext_resource type="Script" uid="uid://mahcrqfjlyyq" path="res://scripts/replay.gd" id="3_rerck"]
[ext_resource type="Script" uid="uid://skj8dxeivfvs" path="res://scripts/player_input.gd" id="4_qn400"]
[ext_resource type="PackedScene" uid="uid://dkhqxc2w4rda4" path="res://scenes/ui/menu.tscn" id="5_vsnwl"]
[ext_resource type="Script" uid="uid://btc74n06ykolu" path="res://scripts/system_dialog.gd" id="6_rxqo8"]

[node name="GameState" type="Node"]
script = ExtResource("1_aj67o")

[node name="Pausing" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_dq14d")

[node name="Replay" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_rerck")

[node name="PlayerInput" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_qn400")

[node name="Menu" parent="." instance=ExtResource("5_vsnwl")]
unique_name_in_owner = true

[node name="SystemDialog" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("6_rxqo8")
